<resources>
    <string name="app_name">SCP app</string>
    <string name="scp_button">SCPs</string>
    <string name="tales_button">Tales</string>
    <string name="settings_button">Settings</string>
    <string name="back_button">Back</string>
    <string name="search_hint_scp">Search SCPs</string>
    <string name="search_hint_tale">Search Tales</string>
    <string name="scp_image_description">SCP image</string>
    <string name="scp_classification_image_description">SCP classification image</string>
    <string name="rating_arrow_description">Rating image</string>
    <string name="edit_button">Edit</string>
    <string name="add_button">Add</string>
    <string name="save_button">Save</string>
    <string name="add_scp_text">Add SCP</string>
    <string name="add_tale_text">Add a tale</string>
    <string name="edit_scp_text">Edit SCP</string>
    <string name="edit_tale_text">Edit tale</string>
    <string name="scp_id_text">SCP-</string>
    <string name="title_text">Title</string>
    <string name="scp_url_field">Enter SCP URL</string>
    <string name="tale_url_field">Enter Tale URL</string>
    <string name="delete_button">Delete</string>
    <string name="tale_content_field">Enter Tale content here…</string>
    <string name="scp_description_field">Enter Scp description here…</string>
    <string name="scp_wiki_hyperlink_text">Go to SCP Wiki</string>
    <string name="scp_related_tales_text">Related Tales:</string>
    <string name="tale_wiki_hyperlink_text">Go to tale Wiki</string>
    <string name="tale_related_scps_text">Related SCPs:</string>
    <string name="tale_adding_scps_hint">Type an SCP ID and press Enter:</string>
    <string name="prompt_text_username">Enter your username:</string>
    <string name="username_hint">Username</string>
</resources>