<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- SCP Button -->
        <ImageButton
            android:id="@+id/button_scp"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/circular_button_background"
            android:src="@drawable/ic_scp"
            android:scaleType="fitCenter"
            android:contentDescription="@string/scp_button"
            android:layout_marginBottom="16dp" />


        <!-- Tales Button -->
        <ImageButton
            android:id="@+id/button_tales"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/circular_button_background"
            android:src="@drawable/ic_tales"
            android:scaleType="centerInside"
            android:contentDescription="@string/tales_button"
            android:layout_marginBottom="16dp" />

        <!-- Settings Button -->
        <ImageButton
            android:id="@+id/button_settings"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/circular_button_background"
            android:src="@drawable/ic_settings"
            android:scaleType="centerInside"
            android:contentDescription="@string/settings_button" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
