<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity.scp.SCPAdd">

    <!-- Top bar with back button and save button -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_small"
            android:scaleType="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/back_button" />

        <!-- Title Text "Add SCP" -->
        <TextView
            android:id="@+id/topBarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_scp_text"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toEndOf="@id/buttonBack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" />

        <!-- Save Button aligned to the right -->
        <ImageButton
            android:id="@+id/buttonSave"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circular_button_background_white"
            android:src="@drawable/ic_save"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/save_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Placeholder Image for SCP photo -->
    <ImageView
        android:id="@+id/scpPhotoPlaceholder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/placeholder_image"
        android:contentDescription="@string/scp_image_description"
        app:layout_constraintTop_toBottomOf="@id/topBarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

    <!-- Form fields for SCP ID, Title, and Classification -->

    <!-- SCP ID -->
    <EditText
        android:id="@+id/scpIdEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/scp_id_text"
        android:textColor="@color/white"
        android:inputType="text"
        android:importantForAccessibility="yes"
        android:textSize="24sp"
        android:padding="8dp"
        android:background="@color/light_gray"
        android:autofillHints="name"
        app:layout_constraintTop_toTopOf="@id/scpPhotoPlaceholder"
        app:layout_constraintStart_toEndOf="@id/scpPhotoPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="4dp" />

    <!-- Title -->
    <EditText
        android:id="@+id/scpTitleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/title_text"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:importantForAccessibility="yes"
        android:textSize="24sp"
        android:padding="8dp"
        android:background="@color/light_gray"
        android:autofillHints="name"
        app:layout_constraintTop_toBottomOf="@id/scpIdEditText"
        app:layout_constraintStart_toEndOf="@id/scpPhotoPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="16dp" />

    <!-- Classification Spinner -->
    <Spinner
        android:id="@+id/classificationSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:padding="8dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/scpTitleEditText"
        app:layout_constraintStart_toEndOf="@id/scpPhotoPlaceholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"/>

    <!-- URL Field -->
    <EditText
        android:id="@+id/urlEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/scp_url_field"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:importantForAccessibility="yes"
        android:textSize="24sp"
        android:padding="8dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/scpPhotoPlaceholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:layout_marginTop="16dp" />

    <!-- Divider Line -->
    <View
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/urlEditText" />

    <!-- Description Text -->
    <ScrollView
        android:id="@+id/descriptionScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/dividerLine"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/scpDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/scp_description_field"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:padding="16dp"
            android:lineSpacingExtra="4dp"
            android:scrollbars="vertical"
            android:background="@color/light_gray"
            android:importantForAccessibility="yes" />
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
