<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".activity.tale.TaleDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBarContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/light_gray"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_small"
            android:scaleType="center"
            android:layout_margin="8dp"
            android:contentDescription="@string/back_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <!-- Tale rating -->
        <TextView
            android:id="@+id/textViewTaleRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_margin="8dp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imageViewTaleRatingArrow" />

        <!-- Tale rating image -->
        <ImageView
            android:id="@+id/imageViewTaleRatingArrow"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/rating_arrow_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_scp" />

        <!-- Edit Button -->
        <ImageButton
            android:id="@+id/button_scp"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/circular_button_background"
            android:src="@drawable/ic_edit"
            android:scaleType="fitCenter"
            android:contentDescription="@string/edit_button"
            android:layout_margin="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Tale Title -->
    <TextView
        android:id="@+id/textViewTaleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/topBarContainer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Divider Line -->
    <View
        android:id="@+id/dividerLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/textViewTaleTitle" />

    <!-- Scrollable Content -->
    <ScrollView
        android:id="@+id/scrollViewContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/textViewTaleTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Tale content -->
            <TextView
                android:id="@+id/textViewTaleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_margin="16dp"
                android:textColor="@color/white" />

            <!-- Divider Line -->
            <View
                android:id="@+id/dividerLine2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/white" />

            <!-- Tale Wiki Hyperlink -->
            <TextView
                android:id="@+id/textViewTaleWikiLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:autoLink="web"
                android:clickable="true"
                android:focusable="true"
                android:textColor="@color/link_color"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck"
                tools:text="@string/tale_wiki_hyperlink_text" />

            <!-- SCP Header -->
            <TextView
                android:id="@+id/textViewSCPsHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="16dp"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"
                tools:text="@string/tale_related_scps_text" />

            <!-- SCP List -->
            <LinearLayout
                android:id="@+id/linearLayoutSCPs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp">
                <!-- Individual tale entries will be added dynamically -->
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
